--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;1,400&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="/src/sass/libs/fontello.css" />
   </head>
   <body>
     <section class="promo">
@@ -192,7 +193,7 @@
         </div>
       </div>
     </section>
-    
+
     <section class="works">
       <div class="container">
         <h2 class="title-h2">check out our works</h2>
@@ -223,6 +224,111 @@
         </div>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__newsletter">
+            <h3 class="footer__header">newsletter</h3>
+            <div class="footer__text" for="e-mail">
+              Keep up to date with news and promotions
+            </div>
+            <form action="#" class="footer__form">
+              <input
+                type="text"
+                id="e-mail"
+                class="footer__input"
+                placeholder="Enter your e-mail"
+              />
+              <label
+                for="footer__checkbox"
+                class="footer__check-block"
+              >
+                <input
+                  type="checkbox"
+                  id="footer__checkbox"
+                  class="footer__checkbox"
+                  required
+                />
+                I agree with the
+                <a href="#">terms</a>
+              </label>
+              <button class="btn-submit footer__form-btn">
+                submit
+              </button>
+            </form>
+          </div>
+
+          <div class="footer__links">
+            <div class="footer__links-block">
+              <h3 class="footer__header">discover</h3>
+              <nav class="footer__nav">
+                <ul>
+                  <li class="footer__link">
+                    <a href="#">About Us</a>
+                  </li>
+                  <li class="footer__link"><a href="#">Blog</a></li>
+                </ul>
+              </nav>
+            </div>
+            <div class="footer__links-block">
+              <h3 class="footer__header">shopping</h3>
+              <nav class="footer__nav">
+                <ul>
+                  <li class="footer__link">
+                    <a href="#">Catalog</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+            <div class="footer__links-block">
+              <h3 class="footer__header">information</h3>
+              <nav class="footer__nav">
+                <ul>
+                  <li class="footer__link">
+                    <a href="#">Terms and Conditions</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+
+          <div class="footer__social">
+            <h3 class="footer__header">follow us</h3>
+            <ul class="footer__social-block">
+              <li>
+                <a
+                  href="https://www.facebook.com/"
+                  class="footer__link"
+                >
+                  <span class="icon-facebook"></span>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.instagram.com/"
+                  class="footer__link"
+                >
+                  <span class="icon-instagram"></span>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.pinterest.com/"
+                  class="footer__link"
+                >
+                  <span class="icon-pinterest-circled"></span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer__copyright">
+          © Copyright 2025, Ceramic soul
+        </div>
+      </div>
+    </footer>
 
     <script type="module" src="/src/js/script.js"></script>
   </body>
