--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
       content="Website for Ceramic soul brand"
     />
     <meta name="author" content="Awesome student" />
-    <title>Ceramic soul</title>
+    <title>About</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link
@@ -26,12 +26,7 @@
     <link rel="stylesheet" href="/src/sass/libs/fontello.css" />
   </head>
   <body>
-    <section class="promo">
-      <img
-        src="/src/img/promo/potter.jpg"
-        alt="potter"
-        class="promo__potter"
-      />
+    <section class="about">
       <div class="container">
         <div class="header">
           <div class="header__menu">
@@ -41,9 +36,15 @@
             </div>
             <nav class="header__menu-nav">
               <ul>
-                <li><a href="#" class="header__menu-link">catalog</a></li>
-                <li><a href="#" class="header__menu-link">blog</a></li>
-                <li><a href="#" class="header__menu-link">about</a></li>
+                <li>
+                  <a href="#" class="header__menu-link">catalog</a>
+                </li>
+                <li>
+                  <a href="#" class="header__menu-link">blog</a>
+                </li>
+                <li>
+                  <a href="#" class="header__menu-link">about</a>
+                </li>
               </ul>
             </nav>
           </div>
@@ -67,108 +68,66 @@
             </ul>
           </nav>
         </div>
-        <div class="promo__wrapper">
-          <h1 class="title-h1-italic promo__title">
-            Make your dream come true <br />
-            or decorate your home
-          </h1>
-          <div class="promo__cta">
-            <img
-              class="promo__img"
-              src="/src/img/promo/ceramic-vase.jpg"
-              alt=""
-            />
-            <button class="btn-default promo__btn">shop now</button>
-          </div>
+        <h1 class="title-h1 about__title">where it all began</h1>
+
+        <div class="about__info">
+          <img
+            class="about__img"
+            src="/src/img/about/crafts.jpg"
+            alt="crafts"
+          />
+          <p class="about__text">
+            Our small pottery workshop began as a simple passion
+            project, rooted in a love for handmade artistry and
+            traditional craftsmanship. What started with a single
+            wheel and a few lumps of clay has grown into a cozy
+            creative space where ideas take shape and stories are told
+            through every piece. Inspired by timeless techniques and
+            the beauty of natural materials, we’ve built a place where
+            both beginners and experienced artists can come together,
+            share their skills, and celebrate the art of pottery. Each
+            creation reflects our journey—shaped by hand, fired with
+            care, and made to be cherished.<br /><br />
+            Over the years, our workshop has become more than just a
+            place to create—it’s a community. Friends, families, and
+            curious visitors gather here to learn, connect, and
+            experience the joy of working with clay. From intimate
+            masterclasses to collaborative projects, we believe in the
+            power of handmade art to bring people together and spark
+            creativity in unexpected ways.<br /><br />
+            Every piece that leaves our studio carries a bit of our
+            story, blending tradition with personal expression.
+            Whether it’s a simple cup or an intricate vase, our
+            ceramics are crafted to be both beautiful and functional,
+            adding warmth and authenticity to any space.
+          </p>
         </div>
-      </div>
-    </section>
 
-    <section class="activities">
-      <div class="container">
-        <h2 class="title-h2">create or buy</h2>
-        <div class="pure-g activities__wrapper">
-          <div class="pure-u-1 pure-u-xl-2-5 activities__col">
-            <h3 class="title-h3">our store</h3>
-            <img
-              src="/src/img/about/store.jpg"
-              alt="store"
-              class="activities__img"
-            />
-            <p class="activities__text">
-              Welcome to
-              <span class="activities__text_colored"
-                >Ceramic Soul</span
-              >, where each piece tells a story of craftsmanship and
-              creativity. Our handmade ceramics are thoughtfully
-              designed and carefully crafted, blending traditional
-              techniques with modern aesthetics. Whether you're
-              looking for a unique gift or a special addition to your
-              home, our collection offers timeless pieces that bring
-              warmth and authenticity to any space.
-            </p>
-          </div>
-          <div class="pure-u-1 pure-u-xl-3-5 activities__col">
-            <h3 class="title-h3">our workshop</h3>
-            <img
-              src="/src/img/about/ceramic.jpg"
-              alt="store"
-              class="activities__img"
-            />
-            <p class="activities__text activities__text_fixed">
-              At
-              <span class="activities__text_colored"
-                >Ceramic Soul</span
-              >
-              workshop, we don’t just craft ceramics—we invite you to
-              get hands-on and create your own unique pieces. Through
-              our engaging masterclasses, you’ll learn traditional
-              techniques, work with natural materials, and experience
-              the joy of shaping clay into something truly personal.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
+        <div id="touch"></div>
 
-    <div id="touch-section"></div>
+        <script>
+          fetch('/touch-form.html')
+            .then(res => res.text())
+            .then(html => {
+              document.getElementById('touch').innerHTML = html;
+            });
+        </script>
 
-    <script>
-      fetch('/touch-form.html')
-        .then(res => res.text())
-        .then(html => {
-          document.getElementById('touch-section').innerHTML = html;
-        });
-    </script>
-
-    <section class="works">
-      <div class="container">
-        <h2 class="title-h2">check out our works</h2>
-
-        <div class="works__wrapper">
-          <div class="swiper works__slider">
-            <!-- Additional required wrapper -->
-            <div class="swiper-wrapper">
-              <!-- Slides -->
-              <div class="swiper-slide">
-                <img src="/src/img/works/tea-1.jpg" alt="tea-1" />
-              </div>
-              <div class="swiper-slide">
-                <img src="/src/img/works/tea-2.jpg" alt="tea-2" />
-              </div>
-              <div class="swiper-slide">
-                <img src="/src/img/works/tea-3.jpg" alt="tea-3" />
-              </div>
-              <div class="swiper-slide">
-                <img src="/src/img/works/tea-2.jpg" alt="tea-2" />
-              </div>
+        <section class="findus">
+          <div class="container">
+            <h2 class="title-h2 findus__title">Find us</h2>
+            <div class="findus__wrapper">
+              
+            <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1542738.8115154053!2d-75.64209002431207!3d40.956035477017316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2593c58f8777d%3A0xe2215ac687bd7249!2sCLAY%20SPACE%20Ceramic%20Center!5e0!3m2!1sen!2sua!4v1750766854038!5m2!1sen!2sua"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
             </div>
           </div>
-          <div class="swiper-pagination"></div>
-
-          <button class="icon-left-open works__slider-nav"></button>
-          <button class="icon-right-open works__slider-nav"></button>
-        </div>
+        </section>
       </div>
     </section>
 
