add forms validation

--- a/touch-form.html
+++ b/touch-form.html
@@ -47,6 +47,8 @@
               placeholder="Question"
               required
             ></textarea>
+            <div class="error-message"></div>
+
             <label
               for="checkbox"
               class="touch__label touch__check-block"
@@ -60,6 +62,8 @@
               I agree with the
               <a href="#">terms</a>
             </label>
+            <div class="checkbox-error-message"></div>
+
             <button class="btn-send touch__btn">
               send request
             </button>
