--- a/about.html
+++ b/about.html
@@ -117,14 +117,13 @@
           <div class="container">
             <h2 class="title-h2 findus__title">Find us</h2>
             <div class="findus__wrapper">
-              
-            <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1542738.8115154053!2d-75.64209002431207!3d40.956035477017316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2593c58f8777d%3A0xe2215ac687bd7249!2sCLAY%20SPACE%20Ceramic%20Center!5e0!3m2!1sen!2sua!4v1750766854038!5m2!1sen!2sua"
-            style="border: 0"
-            allowfullscreen=""
-            loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"
-          ></iframe>
+              <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1542738.8115154053!2d-75.64209002431207!3d40.956035477017316!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c2593c58f8777d%3A0xe2215ac687bd7249!2sCLAY%20SPACE%20Ceramic%20Center!5e0!3m2!1sen!2sua!4v1750766854038!5m2!1sen!2sua"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
             </div>
           </div>
         </section>
@@ -136,16 +135,17 @@
         <div class="footer__wrapper">
           <div class="footer__newsletter">
             <h3 class="footer__header">newsletter</h3>
-            <div class="footer__text" for="e-mail">
+            <div class="footer__text">
               Keep up to date with news and promotions
             </div>
             <form action="#" class="footer__form">
               <input
                 type="text"
-                id="e-mail"
+                id="footer__email"
                 class="footer__input"
-                placeholder="Enter your e-mail"
+                placeholder="Enter your email"
               />
+              <div class="email-error-message"></div>
               <label
                 for="footer__checkbox"
                 class="footer__check-block"
@@ -159,6 +159,8 @@
                 I agree with the
                 <a href="#">terms</a>
               </label>
+              <div class="check-error-message"></div>
+
               <button class="btn-submit footer__form-btn">
                 submit
               </button>
