--- a/index.html
+++ b/index.html
@@ -177,16 +177,17 @@
         <div class="footer__wrapper">
           <div class="footer__newsletter">
             <h3 class="footer__header">newsletter</h3>
-            <div class="footer__text" for="e-mail">
+            <div class="footer__text">
               Keep up to date with news and promotions
             </div>
             <form action="#" class="footer__form">
               <input
                 type="text"
-                id="e-mail"
+                id="footer__email"
                 class="footer__input"
-                placeholder="Enter your e-mail"
+                placeholder="Enter your email"
               />
+              <div class="email-error-message"></div>
               <label
                 for="footer__checkbox"
                 class="footer__check-block"
@@ -200,6 +201,8 @@
                 I agree with the
                 <a href="#">terms</a>
               </label>
+              <div class="check-error-message"></div>
+
               <button class="btn-submit footer__form-btn">
                 submit
               </button>
