optimize images + add animations

--- a/catalog.html
+++ b/catalog.html
@@ -37,13 +37,15 @@
             <nav class="header__menu-nav">
               <ul>
                 <li>
-                  <a href="#" class="header__menu-link">catalog</a>
+                  <a href="/catalog" class="header__menu-link"
+                    >catalog</a
+                  >
                 </li>
                 <li>
-                  <a href="#" class="header__menu-link">blog</a>
+                  <a href="/blog" class="header__menu-link">blog</a>
                 </li>
                 <li>
-                  <a href="#" class="header__menu-link">about</a>
+                  <a href="/about" class="header__menu-link">about</a>
                 </li>
               </ul>
             </nav>
@@ -52,7 +54,7 @@
             <div class="burger">
               <span></span><span></span><span></span>
             </div>
-            <a href="#" class="header__logo"
+            <a href="/index" class="header__logo"
               ><img src="/src/logo/logo.png" alt="logo"
             /></a>
             <div class="header__icons">
@@ -62,9 +64,11 @@
           </div>
           <nav class="header__nav">
             <ul>
-              <li><a href="#" class="header__link">catalog</a></li>
-              <li><a href="#" class="header__link">blog</a></li>
-              <li><a href="#" class="header__link">about</a></li>
+              <li>
+                <a href="/catalog" class="header__link">catalog</a>
+              </li>
+              <li><a href="/blog" class="header__link">blog</a></li>
+              <li><a href="/about" class="header__link">about</a></li>
             </ul>
           </nav>
         </div>
@@ -224,6 +228,7 @@
                 id="footer__email"
                 class="footer__input"
                 placeholder="Enter your email"
+                name="footer__email"
               />
               <div class="email-error-message"></div>
               <label
@@ -253,9 +258,11 @@
               <nav class="footer__nav">
                 <ul>
                   <li class="footer__link">
-                    <a href="#">About Us</a>
+                    <a href="/about">About Us</a>
                   </li>
-                  <li class="footer__link"><a href="#">Blog</a></li>
+                  <li class="footer__link">
+                    <a href="/blog">Blog</a>
+                  </li>
                 </ul>
               </nav>
             </div>
@@ -264,7 +271,7 @@
               <nav class="footer__nav">
                 <ul>
                   <li class="footer__link">
-                    <a href="#">Catalog</a>
+                    <a href="/catalog">Catalog</a>
                   </li>
                 </ul>
               </nav>
