--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/src/sass/libs/fontello.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
   </head>
   <body>
     <section class="promo">
@@ -41,9 +45,17 @@
             </div>
             <nav class="header__menu-nav">
               <ul>
-                <li><a href="#" class="header__menu-link">catalog</a></li>
-                <li><a href="#" class="header__menu-link">blog</a></li>
-                <li><a href="#" class="header__menu-link">about</a></li>
+                <li>
+                  <a href="/catalog" class="header__menu-link"
+                    >catalog</a
+                  >
+                </li>
+                <li>
+                  <a href="/blog" class="header__menu-link">blog</a>
+                </li>
+                <li>
+                  <a href="/about" class="header__menu-link">about</a>
+                </li>
               </ul>
             </nav>
           </div>
@@ -51,7 +63,7 @@
             <div class="burger">
               <span></span><span></span><span></span>
             </div>
-            <a href="#" class="header__logo"
+            <a href="/index" class="header__logo"
               ><img src="/src/logo/logo.png" alt="logo"
             /></a>
             <div class="header__icons">
@@ -61,14 +73,18 @@
           </div>
           <nav class="header__nav">
             <ul>
-              <li><a href="#" class="header__link">catalog</a></li>
-              <li><a href="#" class="header__link">blog</a></li>
-              <li><a href="#" class="header__link">about</a></li>
+              <li>
+                <a href="/catalog" class="header__link">catalog</a>
+              </li>
+              <li><a href="/blog" class="header__link">blog</a></li>
+              <li><a href="/about" class="header__link">about</a></li>
             </ul>
           </nav>
         </div>
         <div class="promo__wrapper">
-          <h1 class="title-h1-italic promo__title">
+          <h1
+            class="title-h1-italic promo__title animate__animated animate__pulse"
+          >
             Make your dream come true <br />
             or decorate your home
           </h1>
@@ -186,6 +202,7 @@
                 id="footer__email"
                 class="footer__input"
                 placeholder="Enter your email"
+                name="footer__email"
               />
               <div class="email-error-message"></div>
               <label
@@ -215,9 +232,11 @@
               <nav class="footer__nav">
                 <ul>
                   <li class="footer__link">
-                    <a href="#">About Us</a>
+                    <a href="/about">About Us</a>
                   </li>
-                  <li class="footer__link"><a href="#">Blog</a></li>
+                  <li class="footer__link">
+                    <a href="/blog">Blog</a>
+                  </li>
                 </ul>
               </nav>
             </div>
@@ -226,7 +245,7 @@
               <nav class="footer__nav">
                 <ul>
                   <li class="footer__link">
-                    <a href="#">Catalog</a>
+                    <a href="/catalog">Catalog</a>
                   </li>
                 </ul>
               </nav>
